--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 axum = "0.8.3"
 tokio = { version = "1.44.2", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
+once_cell = "1.18"
